--- a/João Guilherme Bogo Cristovão/20240801_exercicioHTML/style.css
+++ b/João Guilherme Bogo Cristovão/20240801_exercicioHTML/style.css
@@ -6,21 +6,18 @@
 html,
 
 body {
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #dadbd5;
-
 }
 
-.main-container .mc-right .image-infos img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-
-}
-
-.main-container .mc-right header {
+.main-container .mc-one header {
     display: flex;
     justify-content: space-between;
     padding: 30px;
@@ -30,37 +27,37 @@ body {
     border-style: solid;
     border-radius: 10px;
     background-color: #eeeeee;
+    column-gap: 10px;
 }
 
-.main-container .mc-right header .image-infos {
+.main-container .mc-one header .image-infos {
     display: flex;
     align-items: center;
     column-gap: 10px;
 }
 
-.main-container .mc-right header .image-infos img {
-    width: 50px;
-    height: 50px;
+.main-container .mc-one header .image-infos img {
+    width: 80px;
+    height: 80px;
     border-radius: 50px;
 }
 
-.main-container .mc-right header .image-infos .infos .name {
+.main-container .mc-one header .image-infos .infos .name {
     display: flex;
     font-size: 26px;
     font-weight: bold;
 }
 
-.main-container .mc-right header .image-infos .infos .date {
+.main-container .mc-one header .image-infos .infos .date {
     font-size: 14px;
     color: #4b4b4b;
 }
 
-.main-container .mc-right header .icons {
+.main-container .mc-one header .icons {
     
     display: flex;
     font-size: 25px;
     font-weight: bold;
     align-items: center;
     column-gap: 30px;
-    color: #767676;
 }
