--- a/Miguel Tavares/20240725_htmlcss-whatssap/style.css
+++ b/Miguel Tavares/20240725_htmlcss-whatssap/style.css
@@ -13,235 +13,49 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #dadbd5;
+    background-color: #fff;
 
 }
 
-.main-container {
-    overflow: hidden;
+.container {
     display: flex;
-    height: 90%;
-    max-width: 1000px;
-    background-color: #ffffff;
-    flex-grow: 1;
-    box-shadow: 0px 0px 12px -5px rgba(0, 0, 0, 1);
-    border-radius: 5px;
-}
-
-.main-container .mc-left {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    width: 380px;
-    background-color: red;
-}
-
-.main-container .mc-left header {
-    display: flex;
-    justify-content: space-between;
+    justify-content:space-around;
     background-color: #eeeeee;
-    padding: 15px;
-}
-
-.main-container .mc-left header .icons {
-    display: flex;
-    font-size: 35px;
-    align-items: center;
-    color: #767676;
-    column-gap: 15px;
-}
-
-.main-container .mc-left header img {
-    width: 50px;
-    border-radius: 50px;
-}
-
-.main-container .mc-left .search {
-    background-color: #ffffff;
-    display: flex;
-    align-items: center;
-    padding: 15px;
-    border-bottom: 1px solid #eee;
-    column-gap: 15px;
-}
-
-.main-container .mc-left .search input {
-    flex: 1;
-    padding: 8px;
-    border: 0;
-    outline: 0;
-}
-
-.main-container .mc-left .users {
-    background-color: #ffffff;
-    flex: 1;
-}
-
-.main-container .mc-left .users-container {
-    flex: 1;
-    background-color: #ffffff;
-
-}
-
-.main-container .mc-left .users-container .user {
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.main-container .mc-left .users-container .user.user:hover{
-background-color: #f1f1f1;
-cursor: pointer;
-}
-
-.main-container .mc-left .users-container .user .date {
-    display: flex;
-    align-items: center;
-}
-
-.main-container .mc-left .users-container .user .image-infos {
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-}
-
-.main-container .mc-left .users-container .user .image-infos img {
-    width: 50px;
-    border-radius: 50px;
-    height: 50px;
-}
-
-.main-container .mc-left .users-container .user .image-infos .name{
-font-weight: 700;
-
-}
-
-.main-container .mc-left .users-container .user .image-infos .message{
-    color: 666;
-    font-size: 14px;
-
-}
-.main-container .mc-left .users-container .user .image-infos .date{
-    align-items: center;
-    font-size: 14px;
-    display: flex;
-color: #666;
-
-}
-
-
-.main-container .mc-right {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    height: 100%;
-    background-color: green;
-}
-
-.main-container .mc-right header {
-    display: flex;
-    justify-content: space-between;
-    background-color: #eeeeee;
-    padding: 15px;
-}
-
-.main-container .mc-right header .icons {
-    display: flex;
-    font-size: 35px;
-    align-items: center;
-    color: #767676;
-    column-gap: 15px;
-}
-
-.main-container header .image-infos {
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-}
-
-.main-container header .image-infos img {
-    width: 50px;
-    border-radius: 50px;
-    height: 50px;
-}
-
-.main-container header .image-infos .name{
-font-weight: 700;
-}
-
-.main-container header .image-infos .message{
-    color: 666;
-    font-size: 14px;
-}
-
-.main-container .mc-right .messages-container{
-    background-color: #e3dbd8 ;
-    padding: 15px;
-    flex: 1;
-
-}
-
-.main-container .mc-right .messages-container .date{
-   display: flex;
-   justify-content: center;
-}
-
-.main-container .mc-right .messages-container .date span{
-    background-color: #e8f1f9;
-    padding: 10px;
-    display: inline-block;
-    border-radius: 5px;
-}
-
-
-
-.main-container .mc-right .messages-container .message{
-    margin-top: 10px;
-    display: flex;
-}
-
-.main-container .mc-right .messages-container .message span{
-    display: inline-block;
-    padding: 10px 10px 22px 10px;
-    border-radius: 5px;
-    background-color: #ffffff;
-    max-width: 280px;
-    min-width: 100px;
-    word-break: break-word;
-    position: relative;
-}
-
-.main-container .mc-right .messages-container .message span::after{
- content: attr(data-time);   
- font: 13px;
- color: #767676;
- position: absolute;
- bottom: 4px;
- right:10px; 
-}
-
-.main-container .mc-right .messages-container .message.message-right {
-   justify-content: flex-end;
+    padding: 30px;
+    border: 1px solid #CCC;
+    border-radius: 10px;
+    min-width: 400px;
     
 }
 
-.main-container .mc-right .messages-container .message.message-right span{
-    background-color: #e1ffc4;
+.container .icons{
+    display: flex;
+    font-size: 30px;
+    font-weight: 700;
+    align-items: center;
+    column-gap: 30px;  
+    text-shadow: 0 0 3px #000;
 }
 
-
-.main-container .mc-right footer{
-display: flex;
-padding: 15px;
-background-color: #eee;
-justify-content: space-between;
-align-items: center;
-column-gap: 10px;
+.container .image-infos{
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
 }
 
-.main-container .mc-right footer input{
-    flex: 1;
-    padding: 8px;
-    border: 0;
-    outline: 0;
+.container .image-infos img{
+    width: 80px;
+    border-radius: 50px;
+    height: 80px; 
+    
+}
+
+.container .image-infos .name{
+    font-weight: 700;
+    font-size: 26px;
+}
+
+.container .image-infos .message{
+    color: #4b4b4b;
+    font-size: 16px;
 }
