--- a/Guilherme Cabral/2024801_exercicioHTML/style.css
+++ b/Guilherme Cabral/2024801_exercicioHTML/style.css
@@ -1,33 +1,62 @@
+* {
+  margin: 0;
+  padding: 0;
 
-    * {
-        margin: 0;
-        padding: 0;
-    }
-    
-    html,
-    body {
-        height: 100%;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-    
-    body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #dadbd5;
-    }
+} 
 
-    .main-container {
-        display: flex;
-    
-        height: 30%;
-        min-width: 400px;
-        background-color: #FFFFFF;
-        border-radius: 1px;
-    }
-    .main-container .mc-left header img {
-        display: flex;
-        min-width: 400px;
-        background-color: #eeeeee;
-    }
+html,
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; 
+  background-color: #eaeaea;
+}
 
+.main-container { 
+    background-color: #f5f5f5;
+    padding: 30px;
+    border: 1px solid #CCC;
+    border-radius: 10px;
+    min-width: 400px;
+}
+ 
+.main-container header{
+ display: flex;
+ align-items: center; 
+ width: 100%;
+
+}
+
+.main-container header img {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+ 
+}
+
+.main-container header .info{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  flex-grow: 1;
+
+}
+
+.main-container header .info .name{
+   font-size: 26px;
+   font-weight: bold;
+}
+
+.main-container header .info .date{
+   font-size: 16px;
+   color: #4b4b4b;
+}
+
+.main-container header .icons{
+  font-size: 25px;
+  font-weight: bold;
+  margin-left: 30px;
+
+}
