--- a/Alan da Silva Batista/20240801_exercicioHTML/style.css
+++ b/Alan da Silva Batista/20240801_exercicioHTML/style.css
@@ -1,37 +1,63 @@
 * {
-    margin: 50px;
-    padding: 50px;
-  
-  }
-  html,
+  margin: 0;
+  padding: 0;
+
+} 
+
+html,
 body {
-  height: 100%;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-
-body {
-  background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh; 
+  background-color: #eaeaea;
+}
+
+.main-container { 
+    background-color: #f5f5f5;
+    padding: 30px;
+    border: 1px solid #CCC;
+    border-radius: 10px;
+    min-width: 400px;
+}
+ 
+.main-container header{
+ display: flex;
+ align-items: center; 
+ width: 100%;
 
 }
 
-  .main-container .mc-left {
-    height: 100%;
-    width: 380px;
-    background-color: red;
-    display: flex;
-    flex-direction: column;
-  }
+.main-container header img {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+ 
+}
 
-  
-.main-container .mc-left .image-infos {
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-  
-  }
-  
-  
+.main-container header .info{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  flex-grow: 1;
+
+}
+
+.main-container header .info .name{
+   font-size: 26px;
+   font-weight: bold;
+}
+
+.main-container header .info .date{
+   font-size: 16px;
+   color: #4b4b4b;
+}
+
+.main-container header .icons{
+  font-size: 25px;
+  font-weight: bold;
+  margin-left: 30px;
+}
+
+
