--- a/Alisson dos Santos Guimarães Mares/Desi2023_exercicios/20240801_exercicioHTML/.vscode/exerc.css
+++ b/Alisson dos Santos Guimarães Mares/Desi2023_exercicios/20240801_exercicioHTML/.vscode/exerc.css
@@ -9,25 +9,48 @@ html, body{
 }
 
 body{
-    background-color: #dadbd5;
+    background-color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.main-container {
-    background-color: red;
-}
-
-.main-container header {
+.main-container{
     display: flex;
     min-width: 400px;
     background-color: #fff;
-    border-bottom: 1px;
+    border: 1px;
+    border-style: solid;
+    border-radius: 10px;
+    border-color: #ccc;
+    padding: 30px; 
 }
 
-.main-container header .images img {
-    background-color: red;
-    width: 50px;
-    height: 50px;
+.main-container header {
+    display: flex; 
+    width: 100%;
+   
+}
+
+.main-container .images img {
+    margin-right: 10px;
+    width: 80px;
+    height: 70px;
+    border-radius: 70px;
+}
+.main-container .infos .nome{
+ font-weight:bold;
+ font-size: 25px;
+ margin-right: 30px;
+}
+
+.main-container .infos .date {
+    color: #4b4b4b;
+    font-size: 16px;
+}
+
+.main-container .icon {
+    font-weight:bold;
+    font-size:25px;
+    
 }
