--- a/Pedro Zimermann/20240806_admin-template/assets/css/style.scss
+++ b/Pedro Zimermann/20240806_admin-template/assets/css/style.scss
@@ -1,42 +1,40 @@
+
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 html,
 body {
-    height: 100;
+
+    height: 100%;
 }
 
 
 .main-container {
 
     header {
-
         &.mc-top {
+            background-color: #283142;
             display: flex;
             align-items: center;
-            background-color: #283142;
 
             .header-logo {
                 width: 250px;
-                padding-left: 16px;
                 padding-right: 16px;
+                padding-left: 16px;
             }
 
             .header-content {
                 .hc-search {
                     .search-container {
-                        
                         width: 300px;
                         height: 40px;
                         border: 1px solid #4d5b75;
-                        background-color: #283142;
                         border-radius: 10px;
-                        display: inline-flex;
+                        background-color: #1b2531;
                         input {
-                          
                         }
                     }
                 }
