--- a/Henrique de Freitas/20240806_admin-template/assets/css/style.scss
+++ b/Henrique de Freitas/20240806_admin-template/assets/css/style.scss
@@ -34,9 +34,7 @@ body {
                         border: 1px solid #4d5b75;
                         border-radius: 10px;
 
-                        input {
-                            
-                        }
+                        input {}
 
                     }
                 }
