--- a/Daniel Silva Rangel Mota/20240806_admin-template/assets/css/style.scss
+++ b/Daniel Silva Rangel Mota/20240806_admin-template/assets/css/style.scss
@@ -28,14 +28,12 @@ html.body {
                     .search-container {
                         width: 300px;
                         height: 40px;
-                        border: 1px solid #4d5b75;                        
+                        border: 1px solid #4d5b75;
                         background-color: #1d2531;
                         border-radius: 10px;
-                        
 
-                        input {
-                            
-                        }
+
+                        input {}
                     }
                 }
             }
