--- a/Daniel Nunes Anzini/20240801_exercicioHTML/styles/style.css
+++ b/Daniel Nunes Anzini/20240801_exercicioHTML/styles/style.css
@@ -59,7 +59,7 @@ body {
     color: #4b4b4b;
     font-size: 16px;
 }
-[22:11, 01/08/2024] Pedro: .container .image-infos img{
+ .container .image-infos img{
     width: 80px;
     border-radius: 50px;
     height: 80px; 
