--- a/Lucas Abreu Leite Nepomuceno/20240801_exercicioHTML/style.css
+++ b/Lucas Abreu Leite Nepomuceno/20240801_exercicioHTML/style.css
@@ -43,7 +43,7 @@ body {
 .main-container .mc-left .infos .name {
     font-size: 26px;
 }
-.main-container .mc-left .infos .name .data{
+.main-container .mc-left .infos .data{
     font-size: 16px;
     color:#4b4b4b
 }
