--- a/Fabio Manske/Exercício_20240801/Style.css
+++ b/Fabio Manske/Exercício_20240801/Style.css
@@ -1,7 +1,7 @@
 
 * {
-    margin: 200;
     padding: 0;
+    margin: 0;
 }
 
 html,
@@ -13,178 +13,110 @@ body {
 body {
     display: flex;
     align-items: center;
-    background-color: #dadbd5;
     justify-content: center;
+    height: 10%;
+    margin: 10%;
+    padding: 30px;
+    width: 400px;
+
 }
 
 .main-container {
-    display: flex;
     flex-grow: 1;
+    display: flex;
     height: 90%;
-    max-width: 400px;
+    max-width: 1000px;
     background-color: #ffffff;
     box-shadow: 0px 0px 12px -5px rgba(0, 0, 0, 1);
     border-radius: 5px;
     overflow: hidden;
 }
 
-.main-container .mc-left {
+.main-container .mc-center {
+
+display: flex;
+justify-content: space-between;
+
+}
+
+.main-conrtainer .mc-center style {
+    flex: 1;
+    align-items: center;
+}
+
+
+.main-container .main-container {
     height: 100%;
     width: 380px;
-    background-color: red;
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
-
 }
 
-.main-container .mc-left header {
+
+.main-container .mc-center header {
     display: flex;
     justify-content: space-between;
-    background-color: #791e1e;
+    display: flex;
+    justify-content: space-between;
+    
     padding: 10px;
+    flex: 1;
+    align-items: center;
 }
 
-.main-container .mc-left header img {
+.main-container .mc-center header .perfil {
+    display: flex;
+column-gap: 10PX;
+display: flex;
+justify-content: space-between;
+
+padding: 10px;
+
+}
+
+.main-container .mc-center header .emoji {
+padding-left: 35px;
+}
+
+
+.main-container .mc-center header img {
+    display: flex;
     width: 50px;
     border-radius: 50px;
-}
-
-.main-container .mc-left header .icons {
-    display: flex;
-    align-items: center;
-    font-size: 35px;
-    color: #767676;
-    column-gap: 15px;
-}
-
-.main-container .mc-left .search {
-    background-color: #fff;
-    display: flex;
-    padding: 15px;
-    border-bottom: 1px solid #eeeeee;
-    column-gap: 15px;
-    align-items: center;
-}
-
-.main-container .mc-right {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    background-color: rgb(226, 230, 226);
-}
-
-.main-container .mc-right header {
-    display: flex;
-    justify-content: space-between;
-    background-color: #eeeeee;
-    padding: 10px;
-}
-
-.main-container .mc-right header .image-infos {
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-}
-
-.main-container .mc-right header .image-infos img {
-    width: 50px;
     height: 50px;
-    border-radius: 50px;
+    padding: 10px;
 }
 
-.main-container .mc-right header .image-infos .infos .name {
+.main-container .mc-center header .infos {
+    padding: 10px;
+}
+
+.main-container .mc-center header .infos .nome {
+    font-size: 26px;
+    display: flex;
     font-weight: bold;
+}
+
+.main-container .mc-center header .icons .nome .emoji {
+column-gap: 55px;
+}
+
+.main-container .mc-center header .icons .data {
     display: flex;
     align-items: center;
-    column-gap: 8px;
-    
-}
-
-.main-container .mc-right header .image-infos .infos .message {
-    font-size: 14px;
-    color: #4b4b4b;
-}
-
-.main-container .mc-right header .icons {
-    display: flex;
-    align-items: center;
-    font-size: 35px;
-    color: #767676;
-    column-gap: 15px;
-
-}
-
-.main-container .mc-right .messages-container {
-    flex: 1;
-    padding: 15px;
-    background-color: #e3dbd8;
-}
-
-.main-container .mc-right .messages-container .date {
-    display: flex;
-    justify-content: center;
-}
-
-.main-container .mc-right .messages-container .date span {
-    background-color: #e8f1f9;
-    padding: 200px;
-    display: inline-block;
-    border-radius: 5px;
-}
-
-.main-container .mc-right .messages-container .message {
-    margin-top: 60px;
-    display: flex;
-
-}
-
-.main-container .mc-right .messages-container .message span {
-    display: inline-block;
-    position: relative;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 10px 10px 22px 10px;
-    max-width: 25px;
-    min-width: 25px;
-    word-break: break-word;
-}
-.main-container .mc-right .messages-container .message span::after{
-    content: '10:30';
-    font-size: 13px;
+    font-size: 16px;
     color: #777;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    column-gap: 10%;
 }
 
-.main-container .mc-right .messages-container .message.message-right {
-    margin-top: 10px;
-    justify-content: end;
 
-}
-
-.main-container .mc-right .messages-container .message.message-right span{
-    background-color: #e1ffc4;    
-
-}
-
-.main-container .mc-right footer {
-    column-gap: 10px;
-    align-items: : center;
-    padding: 15px;
-    background-color: #eeeeee;
+.main-container .mc-center header {
     display: flex;
     justify-content: space-between;
-    
 
+    padding: 10px;
 }
 
-.main-container .mc-right footer input{
-    flex: 1;
-    padding: 8px;
-    border: 0;
-    outline: 0;    
-}
-style.css
-Exibindo index.html.
+
+
