--- a/Nicolas Goncalves Sombrio/20240706_admin-template/assets/css/style.css
+++ b/Nicolas Goncalves Sombrio/20240706_admin-template/assets/css/style.css
@@ -7,17 +7,30 @@ html,
 body {
   height: 100%; }
 
-.main-container header.mc-top {
-  background-color: #283142;
-  display: flex;
-  align-items: center; }
-  .main-container header.mc-top .header-logo {
-    width: 250px;
-    padding-left: 16px;
-    padding-right: 16px; }
-  .main-container header.mc-top .header-content .hc-search .search-container {
-    width: 300px;
-    height: 40px;
-    border: 1px solid #4d5b75;
-    border-radius: 10px;
-    background-color: #1b2531; }
+.main-container {
+  height: 100%; }
+  .main-container header.mc-top {
+    background-color: #283142;
+    display: flex;
+    align-items: center; }
+    .main-container header.mc-top .header-logo {
+      width: 250px;
+      padding-left: 16px;
+      padding-right: 16px; }
+    .main-container header.mc-top .header-content .hc-search .search-container {
+      width: 300px;
+      height: 40px;
+      border: 1px solid #4d5b75;
+      border-radius: 10px;
+      background-color: #1b2531;
+      display: flex;
+      align-items: center;
+      padding-left: 10px;
+      padding-right: 10px;
+      column-gap: 10px; }
+      .main-container header.mc-top .header-content .hc-search .search-container input {
+        background-color: #1b2531;
+        border: none;
+        outline: none;
+        flex: 1;
+        height: 100%; }
