--- a/Guilherme Boeira Damasio/20240806_admin-template/assets/css/style.scss
+++ b/Guilherme Boeira Damasio/20240806_admin-template/assets/css/style.scss
@@ -1,64 +1,172 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 html,
 body {
-    height: 100%;
-    background-color: #1B2531;
-    ;
+	height: 100%;
+}
+
+body {
+	color: #b4bed2;
 }
 
 .main-container {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 
-    header {
+	header {
+		padding-left: 16px;
+		padding-right: 16px;
 
-        &.mc-top {
-            background-color: #283142;
-            display: flex;
-            align-items: center;
+		&.mc-top {
+			display: flex;
+			align-items: center;
+			background-color: #283142;
+			z-index: 1;
+			box-shadow: rgba(0, 0, 0, 0.75) 0px 1px 8px -1px;
 
-            .header-logo {
-                width: 250px;
-                height: 100%;
-                padding-left: 16px;
-                padding-right: 16px;
-            }
+			.header-logo {
+				width: 250px;
+				padding-right: 16px;
+			}
 
-            .header-content {
+			.header-content {
+				flex: 1;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				color: #FFF;
 
-                .hc-search {
-                    .search-container{
-                        input {
-                            background-color: #1B2531;
-                            width: 300px;
-                            height: 40px;
-                            padding: 8px 11px;
-                            border-width: 1px;
-                            border-style: solid;
-                            border-color: #4d5b75;
-                            border-radius: 10px;
-                            transition: all 0.2s;
-                        }
+				.hc-search {
+					color: #72849a;
 
-                        input:hover{
-                            border-color: #12429b;
-                        }
+					.search-container {
+						display: flex;
+						align-items: center;
+						column-gap: 10px;
+						width: 300px;
+						height: 40px;
+						padding-left: 10px;
+						padding-right: 10px;
+						border: 1px solid #4d5b75;
+						background-color: #1b2531;
+						border-radius: 10px;
 
-                        input:focus{
-                            border-color: #000000;
-                            border-width: 1px;
-                            border-style: solid;
-                        }
+						input {
+							color: inherit;
+							height: 100%;
+							flex: 1;
+							background-color: transparent;
+							border: 0;
+							outline: 0;
+						}
+					}
+				}
 
-                    }
-                }
+				.hc-options {
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
 
-            }
-        }
+					.option-item {
+						padding-left: 16px;
+						padding-right: 16px;
 
-        &.mc-bottom {}
-    }
+						i {
+							font-size: 20px;
+						}
+
+						&.menu {
+
+							.menu-container {
+								display: flex;
+								align-items: center;
+								column-gap: 8px;
+
+								.image {
+									width: 40px;
+									height: 40px;
+									background-size: cover;
+									border-radius: 40px;
+								}
+
+								.infos-ct {
+
+									.name,
+									.info {
+										font-size: 14px;
+									}
+
+									.name {
+										font-weight: 500;
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.mc-bottom {
+		flex: 1;
+		display: flex;
+		position: relative;
+
+		.main-menu {
+			height: 100%;
+			width: 250px;
+			position: relative;
+			color: #FFF;
+			background-color: #283142;
+
+			.main-menu-inside {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				padding-top: 15px;
+				padding-bottom: 15px;
+				overflow: auto;
+
+				.title {
+					display: block;
+					padding: 12px 24px;
+					font-size: 12px;
+					text-transform: uppercase;
+				}
+
+				ul {
+
+					li {
+
+						a {
+							display: block;
+							padding: 12px 24px;
+							font-size: 14px;
+							color: inherit;
+						}
+					}
+				}
+			}
+		}
+
+		.main-content {
+			flex: 1;
+			background-color: #1b2531;
+			position: relative;
+
+			.main-content-inside{
+				position: absolute;
+				padding: 25px;
+				width: 100%;
+				height: 100%;
+				overflow: auto;
+			}
+		}
+	}
 }
