--- a/Gabriel Bueno Nazario/20240806_admin-template/assets/css/style.css
+++ b/Gabriel Bueno Nazario/20240806_admin-template/assets/css/style.css
@@ -8,6 +8,7 @@ body {
   height: 100%; }
 
 body {
+  font-family: "Roboto", sans-serif;
   color: #b4bed2; }
 
 .main-container {
@@ -112,5 +113,36 @@ body {
         width: 100%;
         height: 100%;
         overflow: auto; }
+        .main-container .mc-bottom .main-content .main-content-inside .initial-container-top {
+          display: flex; }
+          .main-container .mc-bottom .main-content .main-content-inside .initial-container-top .ict-left {
+            flex: 1; }
+            .main-container .mc-bottom .main-content .main-content-inside .initial-container-top .ict-left .ict-line-container .container-box .lc-cb-infos .value-infos {
+              display: flex;
+              align-items: center;
+              column-gap: 16px; }
+              .main-container .mc-bottom .main-content .main-content-inside .initial-container-top .ict-left .ict-line-container .container-box .lc-cb-infos .value-infos .value-big {
+                font-size: 30px;
+                font-weight: 700;
+                color: #d6d7dc; }
+              .main-container .mc-bottom .main-content .main-content-inside .initial-container-top .ict-left .ict-line-container .container-box .lc-cb-infos .value-infos .value-small {
+                font-size: 17px;
+                font-weight: 700; }
+          .main-container .mc-bottom .main-content .main-content-inside .initial-container-top .ict-right {
+            width: 250px; }
+
+.container-box {
+  display: flex;
+  flex-direction: column;
+  background-color: #283142;
+  padding: 20px;
+  border-radius: 12px; }
+  .container-box .cb-title {
+    font-size: 17px;
+    color: #d6d7dc;
+    font-weight: 500; }
+  .container-box .cb-text {
+    font-size: 14px;
+    color: #72849a; }
 
 /*# sourceMappingURL=style.css.map */
