--- a/Caio Cidral Ramos/20240806_admin-template/assets/css/style.scss
+++ b/Caio Cidral Ramos/20240806_admin-template/assets/css/style.scss
@@ -10,6 +10,7 @@ body {
 }
 
 body {
+	font-family: "Roboto", sans-serif;
 	color: #b4bed2;
 }
 
@@ -166,7 +167,62 @@ body {
 				width: 100%;
 				height: 100%;
 				overflow: auto;
+
+				.initial-container-top{
+					display: flex;
+
+					.ict-left{
+						flex: 1;
+
+						.ict-line-container{
+
+							.container-box{
+
+								.lc-cb-infos{
+									display: flex;
+									align-items: center;
+									column-gap: 16px;
+
+									.value-big{
+										font-size: 30px;
+										font-weight: 700;
+										color: #d6d7dc;
+									}
+
+									.value-small{
+										font-size: 17px;
+										font-weight: 700;
+									}
+								}
+							}
+						}
+					}
+
+					.ict-right{
+						width: 250px;
+						background-color: greenyellow;
+					}
+				}
 			}
 		}
+	}
+}
+
+.container-box{
+	display: flex;
+	flex-direction: column;
+	padding: 20px;
+	border-radius: 12px;
+	background-color: #283142;
+
+	.cb-title{
+		font-size: 17px;
+		color: #d6d7dc;
+		font-weight: 500;
+	}
+
+	.cb-text{
+		font-size: 14px;
+		color: #72849a;
 	}
 }
