--- a/rene_nunes/20240806_admin-template/assets/css/style.scss
+++ b/rene_nunes/20240806_admin-template/assets/css/style.scss
@@ -6,10 +6,11 @@
 
 html,
 body {
-	height: 100%;
+	height: 100%;	
 }
 
 body {
+	font-family: "Roboto", sans-serif;
 	color: #b4bed2;
 }
 
@@ -166,7 +167,61 @@ body {
 				width: 100%;
 				height: 100%;
 				overflow: auto;
+				.inicial-container-top{
+					display: flex;
+
+					.ict-left{
+						flex: 1;
+
+						.ict-line-container{
+							
+							.container-box{
+
+								.lc-cb-infos{
+									display: flex;
+									align-items: center;
+									column-gap: 16px;
+
+									.value-big{
+										font-size: 30px;
+										font-weight: 700;
+										color: #d6d7dc;
+									}
+
+									.value-small{
+										font-size: 17px;
+										font-weight: 700;
+									}
+								}
+							}
+						}
+					}
+
+					.ict-right{
+						width: 250px;
+						background-color: greenyellow;
+					}
+				}
 			}
 		}
 	}
+}
+
+.container-box{
+	display: flex;
+	flex-direction: column;
+	background-color: #283142;
+	padding: 20px;
+	border-radius: 12px;	
+		
+		.cb-title{
+			font-size: 17px;
+			color: #d6d7dc;
+			font-weight: 500;
+		}
+
+		.cb-text{
+			font-size: 14px;
+			color: #72849a
+		}
 }
