--- a/GustavoHenriqueDuarte/whatsap2/style.css
+++ b/GustavoHenriqueDuarte/whatsap2/style.css
@@ -1,235 +1,1 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-
-html, body {
-    height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-body{
-    background-color: #dadbd5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.main-container{
-    display: flex;
-    flex-grow: 1;
-    background-color: #FFFFFF;
-    height: 90%;
-    max-width: 1000px;
-    box-shadow: 0px 0px 12px -5px rgba(0,0,0,1);
-    border-radius: 5px;
-    overflow: hidden;
-}
-
-.main-container .mc-left{
-    width: 380px;
-    height: 100%;
-    background-color: red;
-    display: flex;
-    flex-direction: column;
-}
-
-.main-container .mc-left header{
-    display: flex;
-    background-color: #eeeeee;
-    justify-content: space-between;
-    padding: 15px;
-}
-
-.main-container .mc-left header img{
-    width: 50px;
-    border-radius: 50px;
-}
-
-.main-container .mc-left header .icons{
-    display: flex;
-    align-items: center;
-    font-size: 35px;
-    color: #767676;
-    column-gap: 15px;
-}
-
-.main-container .mc-left .search{
-    background-color: #FFFFFF;
-    display: flex;
-    padding: 15px;
-    column-gap: 15px;
-    align-items: center;
-    border-bottom: 1px solid #eeeeee
-}
-
-.main-container .mc-left .search input{
-    flex: 1;
-    padding: 8px;
-    border: 0;
-    outline: 0;
-}
-
-.main-container .mc-left .users-container{
-    background-color: #FFFFFF;
-    flex: 1;
-}
-
-.main-container .mc-left .users-container .user{
-   display: flex;
-   justify-content: space-between;
-   padding: 15px;
-}
-
-.main-container .mc-left .users-container .user:hover{
-    background-color: #f1f1f1;
-    cursor: pointer;
- }
-
-.main-container .mc-left .users-container .user .image-infos{
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-}
-
-.main-container .mc-left .users-container .user .image-infos img{
-    width: 50px;
-    border-radius: 50px;
-}
-
-.main-container .mc-left .users-container .user .image-infos .infos .name{
- font-weight: bold;
-}
-
-.main-container .mc-left .users-container .user .image-infos .infos .message{
-    color: #767676;
-    font-size: 14px;
-}
-
-.main-container .mc-left .users-container .user .date{
-    display: flex;
-    align-items: center;
-    color: #767676;
-    font-size: 14px;
-}
-
-.main-container .mc-right{
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    height: 100%;
-    background-color: green;
-}
-
-.main-container .mc-right header{
-    display: flex;
-    background-color: #eeeeee;
-    justify-content: space-between;
-    padding: 15px;
-}
-
-.main-container .mc-right header .image-infos{
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-}
-
-.main-container .mc-right header .image-infos img{
-    width: 50px;
-    border-radius: 50px;
-}
-
-.main-container .mc-right header .image-infos .infos .name{
- font-weight: bold;
-}
-
-.main-container .mc-right header .image-infos .infos .message{
-    color: #767676;
-    font-size: 14px;
-}
-
-.main-container .mc-right header .icons{
-    display: flex;
-    align-items: center;
-    font-size: 35px;
-    color: #767676;
-    column-gap: 15px;
-}
-
-.main-container .mc-right .messages-container {
-    flex: 1;
-    padding: 15px;
-    background-color: #e3dbd8;
-}
-
-.main-container .mc-right .messages-container .date{
-    display: flex;
-    justify-content: center;
-}
-
-.main-container .mc-right .messages-container .date span{
-    background-color: #e8f1f9;
-    padding: 10px;
-    border-radius: 5px;
-    display: inline-block;
-}
-
-.main-container .mc-right .messages-container .message{
-    display: flex;
-    justify-content: left;
-    margin-top: 10px;
-}
-
-.main-container .mc-right .messages-container .message span{
-    padding: 10px 10px 22px 10px;
-    background-color: #fff;
-    border-radius: 5px;
-    display: inline-block;
-    max-width: 280px;
-    min-width: 100px;
-    word-break: break-word;
-    position: relative;
-}
-
-.main-container .mc-right .messages-container .message span::after{
-    content: attr(data-time);
-    font-size: 13px;
-    color: #777;
-    position: absolute;
-    bottom: 4px;
-    right: 10px;
-}
-
-.main-container .mc-right .messages-container .message.message-right{
-    justify-content: flex-end;
-}
-
-.main-container .mc-right .messages-container .message.message-right img{
-    width: 280px;
-}
-
-.main-container .mc-right .messages-container .message.message-right span{
-    background-color: #e1ffc4;
-}
-
-.main-container .mc-right footer {
-    display: flex;
-    padding: 15px;
-    column-gap: 10px;
-    align-items: center;
-    background-color: #eee;
-    justify-content: space-between;
-}
-
-.main-container .mc-right footer input{
-    flex: 1;
-    padding: 8px;
-    border: 0;
-    outline: 0;
-}
-
-.main-container .mc-right footer .icon:hover{
-    background-color: #dadbd5;
-    cursor: pointer;
-    border-radius: 50px;
- }
+*{padding:0;margin:0}html,body{height:100%;font-family:Arial, Helvetica, sans-serif}body{background-color:#dadbd5;display:flex;align-items:center;justify-content:center}.main-container{display:flex;flex-grow:1;background-color:#FFFFFF;height:90%;max-width:1000px;box-shadow:0px 0px 12px -5px #000;border-radius:5px;overflow:hidden}.main-container .mc-left{width:380px;height:100%;background-color:red;display:flex;flex-direction:column}.main-container .mc-left header{display:flex;background-color:#eeeeee;justify-content:space-between;padding:15px}.main-container .mc-left header img{width:50px;border-radius:50px}.main-container .mc-left header .icons{display:flex;align-items:center;font-size:20px;color:#767676;column-gap:15px}.main-container .mc-left .search{background-color:#FFFFFF;display:flex;padding:15px;column-gap:15px;align-items:center;border-bottom:1px solid #eeeeee}.main-container .mc-left .search .lupa{color:#767676}.main-container .mc-left .search input{flex:1;padding:8px;border:0;outline:0}.main-container .mc-left .users-container{background-color:#FFFFFF;flex:1}.main-container .mc-left .users-container .user{display:flex;justify-content:space-between;padding:15px}.main-container .mc-left .users-container .user:hover{background-color:#f1f1f1;cursor:pointer}.main-container .mc-left .users-container .user .image-infos{display:flex;align-items:center;column-gap:8px}.main-container .mc-left .users-container .user .image-infos img{width:50px;border-radius:50px}.main-container .mc-left .users-container .user .image-infos .infos .name{font-weight:bold}.main-container .mc-left .users-container .user .image-infos .infos .message{color:#767676;font-size:14px}.main-container .mc-left .users-container .user .date{display:flex;align-items:center;color:#767676;font-size:14px}.main-container .mc-right{display:flex;flex:1;flex-direction:column;height:100%;background-color:green}.main-container .mc-right header{display:flex;background-color:#eeeeee;justify-content:space-between;padding:15px}.main-container .mc-right header .image-infos{display:flex;align-items:center;column-gap:8px}.main-container .mc-right header .image-infos img{width:50px;border-radius:50px}.main-container .mc-right header .image-infos .infos .name{font-weight:bold}.main-container .mc-right header .image-infos .infos .message{color:#767676;font-size:14px}.main-container .mc-right header .icons{display:flex;align-items:center;font-size:20px;color:#767676;column-gap:15px}.main-container .mc-right .messages-container{flex:1;padding:15px;background-color:#e3dbd8}.main-container .mc-right .messages-container .date{display:flex;justify-content:center}.main-container .mc-right .messages-container .date span{background-color:#e8f1f9;padding:10px;border-radius:5px;display:inline-block}.main-container .mc-right .messages-container .message{display:flex;justify-content:left;margin-top:10px}.main-container .mc-right .messages-container .message span{padding:10px 10px 22px 10px;background-color:#fff;border-radius:5px;display:inline-block;max-width:280px;min-width:100px;word-break:break-word;position:relative}.main-container .mc-right .messages-container .message span::after{content:attr(data-time);font-size:13px;color:#777;position:absolute;bottom:4px;right:10px}.main-container .mc-right .messages-container .message.message-right{justify-content:flex-end}.main-container .mc-right .messages-container .message.message-right img{width:280px}.main-container .mc-right .messages-container .message.message-right span{background-color:#e1ffc4}.main-container .mc-right footer{display:flex;padding:15px;column-gap:10px;align-items:center;background-color:#eee;justify-content:space-between}.main-container .mc-right footer input{flex:1;padding:8px;border:0;outline:0}.main-container .mc-right footer .icon{color:#767676}.main-container .mc-right footer .icon:hover{background-color:#dadbd5;cursor:pointer;border-radius:50px}
