--- a/Gabriel Aguiar Bruno/20240806_admin-template/assets/css/style.scss
+++ b/Gabriel Aguiar Bruno/20240806_admin-template/assets/css/style.scss
@@ -7,11 +7,20 @@
 html,
 body {
 	height: 100%;
+	font-family: "Roboto", sans-serif;
 }
 
 body {
-	font-family: "Roboto", sans-serif;
 	color: #b4bed2;
+}
+
+.flex-1 {
+	flex: 1;
+}
+
+.align-center {
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .main-container {
@@ -161,69 +170,219 @@ body {
 			background-color: #1b2531;
 			position: relative;
 
-			.main-content-inside{
+			.main-content-inside {
 				position: absolute;
 				padding: 25px;
 				width: 100%;
 				height: 100%;
 				overflow: auto;
+			}
 
-				.initial-container-top{
-					display: flex;
+			.ict-line-container {
+				display: flex;
+				column-gap: 20px;
+			}
 
-					.ict-left{
-						flex: 1;
+			.initial-container-top {
+				display: flex;
 
-						.ict-line-container{
+				.ict-left {
+					flex: 1;
 
-							.container-box{
+					.ict-line-container {
 
-								.ic-cb-infos{									
-									display: flex;
-									align-items: center;
-									column-gap: 16px;
+						.container-box {
 
-									.value-big{
-										font-size: 30px;
-										font-weight: 700;
-										color: #d6d7dc;
-									}
-									.value-small{
-										font-size: 17px;
-										font-weight: 700;
-										color: crimson;
-									}
+							.lc-cb-infos {
+								display: flex;
+								align-items: center;
+								column-gap: 16px;
+
+								.value-big {
+									font-size: 30px;
+									font-weight: 700;
+									color: #d6d7dc;
+
+								}
+
+								.value-small {
+									font-size: 17px;
+									font-weight: 700;
 								}
 							}
 						}
 					}
-
-					.ict-right{
-						width: 250px;
-						background-color: greenyellow;
-					}
 				}
+
+				.ict-right {
+					width: 250px;
+					background-color: greenyellow;
+				}
+			}
+
+			.initial-container-bottom {
+				margin-top: 20px;
 			}
 		}
 	}
 }
 
-.container-box{
+.container-box {
 	display: flex;
 	flex-direction: column;
-	background-color: #283142;
 	padding: 20px;
 	border-radius: 12px;
+	background-color: #283142;
 
-	.cb-title{
+	.cb-header {
+
+		&+.cb-body {
+			margin-top: 20px;
+		}
+	}
+
+	.cb-title {
 		font-size: 17px;
 		color: #d6d7dc;
 		font-weight: 500;
 	}
-	
-	.cb-text{
+
+	.cb-text {
 		font-size: 14px;
 		color: #72849a;
 	}
-}
 
+	&.cb-form-max-width {
+		max-width: 600px;
+	}
+
+	.table-container {
+		font-size: 14px;
+		overflow: auto;
+		border-radius: 10px;
+
+		.tbl-info-circle-ct {
+			display: flex;
+			align-items: center;
+			column-gap: 10px;
+
+			.circle {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: 30px;
+				height: 30px;
+				font-size: 12px;
+				border-radius: 30px;
+				color: #FFF;
+				font-weight: 500;
+			}
+		}
+
+		.tbl-status {
+			display: inline-flex;
+			border: 1px solid #CCC;
+			padding: 8px 12px;
+			border-radius: 8px;
+			font-size: 12px;
+			font-weight: 500;
+			background-color: #2c94cd;
+			border-color: #1c4961;
+			color: rgba(0, 0, 0, 0.6);
+
+			&.color-blue {
+				background-color: #2c94cd;
+				border-color: #1c4961;
+			}
+
+			&.color-green {
+				background-color: #9bfbae;
+				border-color: #248737;
+			}
+
+			&.color-yellow {
+				background-color: #f2fb9b;
+				border-color: #7b8147;
+			}
+
+			&.color-red {
+				background-color: #df7272;
+				border-color: #873a3a;
+			}
+		}
+
+		table {
+			width: 100%;
+			border-spacing: 0;
+			border-collapse: separate;
+
+			thead {
+
+				tr {
+
+					th {
+						position: relative;
+						padding: 16px 16px;
+						overflow-wrap: break-word;
+						color: #d6d7dc;
+						font-weight: 600;
+						text-align: start;
+						background: #2b3445;
+						border-bottom: 1px solid #1c232f;
+						transition: background 0.2s ease;
+					}
+				}
+			}
+
+			tbody {
+
+				tr {
+
+					td {
+						position: relative;
+						padding: 16px 16px;
+						overflow-wrap: break-word;
+						transition: background 0.2s, border-color 0.2s;
+						border-bottom: 1px solid #1c232f;
+					}
+
+					&:hover td {
+						background: #2b3445;
+					}
+				}
+			}
+		}
+	}
+
+	form {
+
+		label {
+			display: flex;
+			flex-direction: column;
+
+			&+label {
+				margin-top: 15px;
+			}
+
+			.lbl {
+				font-size: 14px;
+				text-transform: uppercase;
+				font-weight: 500;
+				margin-bottom: 6px;
+			}
+
+			input, select, textarea {
+				color: #b4bed2;
+				font-size: 16px;
+				width: 100%;
+				padding: 10px 15px;
+				background-color: #283142;
+				background-image: none;
+				border: 1px solid #4d5b75;
+				border-radius: 6px;
+				outline: 0;
+				color-scheme: dark;
+			}
+		}
+	}
+}
