--- a/Jose Jorge Abreu Silva Junior/20240806_admin-template/assets/css/style.scss
+++ b/Jose Jorge Abreu Silva Junior/20240806_admin-template/assets/css/style.scss
@@ -7,10 +7,10 @@
 html,
 body {
 	height: 100%;
+	font-family: "Roboto", sans-serif;
 }
 
 body {
-	font-family: "Roboto", sans-serif;
 	color: #b4bed2;
 }
 
@@ -161,70 +161,69 @@ body {
 			background-color: #1b2531;
 			position: relative;
 
-			.main-content-inside {
+			.main-content-inside{
 				position: absolute;
 				padding: 25px;
 				width: 100%;
 				height: 100%;
 				overflow: auto;
+			}
 
-				.initial-container-top {
-					display: flex;
+			.initial-container-top{
+				display: flex;
+				.ict-left{
+					flex: 1;
 
-					.ict-left {
-						flex: 1;
+					.ict-line-container{
 
-						.ict-line-container {
-							.container-box {
-								.ic-cb-infos {
-									display: flex;
-									align-items: center;
-									column-gap: 16px;
+						.container-box{
 
-									.value-big {
-										font-size: 30px;
-										font-weight: 700;
-										color: #d6d7dc;
-									}
+							.lc-cb-infos{
+								display: flex;
+								align-items: center;
+								column-gap: 16px;
+								.value-big{
+									font-size: 30px;
+									font-weight: 700;
+									color: #d6d7dc;
 
-									.value-small {
-										font-size: 17px;
-										font-weight: 700;
+								}
 
-									}
+								.value-small{
+									font-size: 17px;
+									font-weight: 700;
 								}
 							}
 						}
-
 					}
+				}
 
-					.ict-right {
-						width: 250px;
-						background-color: greenyellow;
-
-					}
+				.ict-right{
+					width: 250px;
+					background-color: greenyellow;
 				}
 			}
 		}
 	}
 }
 
-.container-box {
+.container-box{
 	display: flex;
 	flex-direction: column;
 	padding: 20px;
 	border-radius: 12px;
 	background-color: #283142;
 
-	.cb-title {
+	.cb-title{
 		font-size: 17px;
 		color: #d6d7dc;
 		font-weight: 500;
+
+		
 	}
 
-	.cb-text {
+	.cb-text{
 		font-size: 14px;
 		color: #72849a;
-
 	}
 }
