--- a/Guilherme da Rocha Goncalves/20240806_admin-template/assets/css/style.scss
+++ b/Guilherme da Rocha Goncalves/20240806_admin-template/assets/css/style.scss
@@ -384,5 +384,28 @@ body {
 				color-scheme: dark;
 			}
 		}
+
+		.form-actions{
+			margin-top: 15px;
+			justify-content: flex-end;
+			display: flex;
+			
+			button{
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-width: 80px;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color: #3e79f7;
+				border: 0;
+				color: #FFF;
+				border: 0;
+				
+			}
+		}
 	}
-}
+}	
