--- a/Daniel Silva Rangel Mota/20240806_admin-template/assets/css/style.scss
+++ b/Daniel Silva Rangel Mota/20240806_admin-template/assets/css/style.scss
@@ -384,5 +384,26 @@ body {
 				color-scheme: dark;
 			}
 		}
+		.form-actions{
+			margin-top: 15px;
+			display:flex;
+			justify-content: flex-end;
+			button{
+				cursor: pointer;
+				display: flex;
+				align-items: center;
+				justify-items: center;
+				min-width: 50px;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color: #3e79f7;
+				color: #FFF;
+				border: 0;
+
+			}
+		}
 	}
 }
