--- a/Geovana Fatima Paradella/20240806_admin-template/assets/css/style.scss
+++ b/Geovana Fatima Paradella/20240806_admin-template/assets/css/style.scss
@@ -363,6 +363,7 @@ body {
 			&+label {
 				margin-top: 15px;
 			}
+			
 
 			.lbl {
 				font-size: 14px;
@@ -382,6 +383,26 @@ body {
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+			}
+		}
+		.form-actions{
+			margin-top: 15px;
+			display: flex;
+			justify-content: flex-end;
+			button{
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-width: 50px;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color:  #3e79f7; ;
+				color: #FFF;
+				border: 0;	
+				cursor: pointer;
 			}
 		}
 	}
