--- a/Andre Carlos Candido da Silva/20240806_admin-template/assets/css/style.scss
+++ b/Andre Carlos Candido da Silva/20240806_admin-template/assets/css/style.scss
@@ -384,5 +384,26 @@ body {
 				color-scheme: dark;
 			}
 		}
+		.form-actionn{
+			margin-top: 15px;
+			display: flex;
+			justify-content: flex-end;
+			button{
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-width: 80px;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color: #3e79f7;
+				color: #fff;
+			    border: 0;
+				cursor: pointer;
+
+			}
+		}
 	}
 }
