--- a/rene_nunes/20240806_admin-template/assets/css/style.scss
+++ b/rene_nunes/20240806_admin-template/assets/css/style.scss
@@ -282,7 +282,8 @@ body {
 		.tbl-status {
 			display: inline-flex;
 			border: 1px solid #CCC;
-			
+			align-items: center;
+			justify-content: center;
 			min-width: 84px;
 			padding: 8px 12px;
 			border-radius: 8px;
@@ -388,6 +389,29 @@ body {
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+			}
+
+			
+		}
+
+		.form-actions{
+			margin-top: 15px;
+			display: flex;
+			justify-content: flex-end;
+			button{
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-width: 50px;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color: #3e79f7;
+				color: #fff;
+				border: 0;		
+				cursor: pointer;		
 			}
 		}
 	}
