--- a/Gabriel Aguiar Bruno/20240806_admin-template/assets/css/style.scss
+++ b/Gabriel Aguiar Bruno/20240806_admin-template/assets/css/style.scss
@@ -281,6 +281,9 @@ body {
 
 		.tbl-status {
 			display: inline-flex;
+			align-items: center;
+			justify-content: center;
+			min-width: 84px;
 			border: 1px solid #CCC;
 			padding: 8px 12px;
 			border-radius: 8px;
@@ -382,6 +385,28 @@ body {
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+			}
+		}
+		
+		.form-actions{
+			display: flex;
+			justify-content: flex-end;
+			margin-top: 15px;
+
+			button{
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-width: 80x;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color: #3e79f7;
+				color: #FFF;
+				border: 0;
+				cursor: pointer;
 			}
 		}
 	}
