--- a/Nicolas Goncalves Sombrio/20240816_Exercícios/Exercicio 9/style.css
+++ b/Nicolas Goncalves Sombrio/20240816_Exercícios/Exercicio 9/style.css
@@ -12,5 +12,12 @@ html, body{
 }
 
 footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
+    background-color: grey;
+    font-size: 50px;
+    width: 100%;
+
 }
