--- a/Fabio Manske/20240806_admin-template/assets/css/style.css
+++ b/Fabio Manske/20240806_admin-template/assets/css/style.css
@@ -14,6 +14,9 @@ body {
 .flex-1 {
   flex: 1; }
 
+.hide {
+  display: none; }
+
 .align-center {
   margin-left: auto;
   margin-right: auto; }
@@ -247,9 +250,9 @@ body {
       outline: 0;
       color-scheme: dark; }
   .container-box form .form-actions {
-    margin-top: 15px;
     display: flex;
-    justify-content: flex-end; }
+    justify-content: flex-end;
+    margin-top: 15px; }
     .container-box form .form-actions button {
       display: flex;
       align-items: center;
