Lucas-Abreu-Leite

--- a/Lucas Abreu Leite Nepomuceno/20240806_admin-template/assets/css/style.scss
+++ b/Lucas Abreu Leite Nepomuceno/20240806_admin-template/assets/css/style.scss
@@ -392,7 +392,6 @@ body {
 			justify-content: flex-end;
 			margin-top: 15px;
 
-
 			button {
 				display: flex;
 				align-items: center;
@@ -404,12 +403,10 @@ body {
 				padding-right: 15px;
 				border-radius: 10px;
 				background-color: #3e79f7;
-				color: #fff;
+				color: #FFF;
 				border: 0;
 				cursor: pointer;
-
 			}
 		}
-
 	}
 }
