--- a/Alan da Silva Batista/20240806_admin-template/assets/css/style.scss
+++ b/Alan da Silva Batista/20240806_admin-template/assets/css/style.scss
@@ -392,6 +392,11 @@ display: none;
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+
+				&.error{
+				 border-color: #d86060;
+				 
+				}
 			}
 		}
 
