--- a/luan_ribeiro2/20240806_admin-template/assets/css/style.css
+++ b/luan_ribeiro2/20240806_admin-template/assets/css/style.css
@@ -249,6 +249,10 @@ body {
       border-radius: 6px;
       outline: 0;
       color-scheme: dark; }
+      .container-box form label input.error,
+      .container-box form label select.error,
+      .container-box form label textarea.error {
+        border-color: #d86060; }
   .container-box form .form-actions {
     display: flex;
     justify-content: flex-end;
@@ -267,3 +271,5 @@ body {
       color: #FFF;
       border: 0;
       cursor: pointer; }
+
+/*# sourceMappingURL=style.css.map */
