--- a/Felipe Weldt/20240806_admin-template/assets/css/style.scss
+++ b/Felipe Weldt/20240806_admin-template/assets/css/style.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .hide{
-display: none;
+	display: none;
 }
 
 .align-center {
@@ -388,6 +388,9 @@ display: none;
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+				&.error{
+					border-color: #d86060;
+				}
 			}
 		}
 
